--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   google_places_flutter: ^2.0.9
   url_launcher: ^6.3.1
   flutter_dotenv: ^5.2.1
+  firebase_messaging: ^15.2.3
+  intl: ^0.19.0
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
